# cbgl

./: .gitignore  CMakeLists.txt  Dockerfile  INSTALLATION_DEPRECATED.md  README.md  docker-compose.yml  package.xml  readme.md
cbgl/: CMakeLists.txt  package.xml
cbgl/configuration_files/: params_cbgl.yaml  params_csm.yaml
cbgl/include/cbgl_node/: cbgl.h
cbgl/include/utils/: fsm_core.h
cbgl/include/utils/map/: map.h
cbgl/include/utils/pf/: pf.h
cbgl/include/utils/range_libc/: CMakeLists.txt  main.cpp
cbgl/include/utils/range_libc/includes/: RangeLib.h
cbgl/launch/: cbgl.launch
cbgl/map/: ag10_0.01.pgm  ag10_0.01.yaml  black.yaml  gray.yaml  white.yaml
cbgl/src/cbgl_node/: CMakeLists.txt  cbgl.cpp  cbgl_node.cpp
cbgl/src/utils/map/: map.c
cbgl/src/utils/occupancy_grid_utils/: coordinate_conversions.cpp  ray_tracer.cpp
cbgl/src/utils/pf/: pf_pdf.c  pf_vector.c
configuration_files/: params_cbgl.yaml  params_fsm.yaml  pipeline_csm.yaml  pipeline_csm_best.yaml  pipeline_general.yaml  pipeline_icp.yaml
docker/: Dockerfile  Dockerfile_old  build_cbgl_image.sh  run_cbgl_container.sh
include/cbgl_node/: cbgl.h  egsl.h
include/utils/occupancy_grid_utils/: coordinate_conversions.h  ray_trace_iterator.h  ray_tracer.h
launch/: avanti_sim.launch  cbgl.launch
src/cbgl_node/: CMakeLists.txt  cbgl.cpp
src/utils/csmc/: CMakeLists.txt  FindGSL.cmake
src/utils/csmc/csm/icp/: icp.c
src/utils/csmc/pkg-config/: csm.pc
src/utils/map/: map.c
src/utils/occupancy_grid_utils/: coordinate_conversions.cpp
src/utils/pf/: pf.c  pf_kdtree.c
