<?xml version="1.0"?>
<package format="2">
  <name>cbgl</name>
  <version>1.0.1</version>
  <description>The Caer-Based Global Localisation package</description>

  <maintainer email="alefilot@auth.gr">li9i</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
